--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  google_maps_flutter: ^0.5.13
-  http: any
-  flutter_svg: ^0.12.0
+  cupertino_icons: ^0.1.3
+  google_maps_flutter: ^0.5.21+13
+  http: ^0.12.0+2
+  flutter_svg: ^0.15.0
 
 dev_dependencies:
   flutter_test:
